[project]
name = "udacity"
version = "0.1.0"
description = "A simple Hello World application"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=0.1.0",
    "pydantic>=2.12.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
udacity = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
